Staging site updated!

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -668,7 +668,7 @@ body {
   }
   .products {
     height: 1051px;
-    background: url("../../images/scm-products-t.png");
+    background: url("https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-products-t.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
   }
