--- a/src/sass/custom/_mediaqueries.scss
+++ b/src/sass/custom/_mediaqueries.scss
@@ -332,7 +332,7 @@
   } // video-carousel
   .products {
     height: 1051px;
-    background: url('../../images/scm-products-t.png');
+    background: url('https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-products-t.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
 
