--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -26,6 +26,10 @@ body {
   padding-bottom: 0;
 }
 
+.modal-popup .modal-footer {
+  display: none;
+}
+
 .content-wrapper {
   font-weight: 300;
   max-width: 1280px;
@@ -123,7 +127,6 @@ body {
 }
 
 .content-wrapper button {
-  color: #212121;
   text-transform: uppercase;
   cursor: pointer;
   background: none;
@@ -141,7 +144,6 @@ body {
 }
 
 .content-wrapper .slick-arrow {
-  color: #424649;
   background: none;
 }
 
@@ -168,18 +170,27 @@ body {
   margin-bottom: 20px;
 }
 
-.content-wrapper button {
+.content-wrapper .scm-btn {
+  position: absolute;
   background: #68bebc;
   border: 1px solid #68bebc;
   color: #fff;
   padding: 10px 20px;
   margin-top: 20px;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: 400;
 }
 
-.content-wrapper button:hover {
+.content-wrapper .scm-btn:hover {
   background: #afdddc;
   border: 1px solid #68bebc;
   color: #fff;
+}
+
+.content-wrapper .slick-next, .content-wrapper .slick-arrow {
+  border: none;
 }
 
 .scm .hero img {
@@ -210,6 +221,10 @@ body {
   text-transform: none;
   width: 85%;
   line-height: 1.4;
+}
+
+.scm .info .info-text a {
+  margin-top: 40px;
 }
 
 .science {
@@ -328,6 +343,8 @@ body {
 .video-carousel .video-thumbnail .video-text img {
   display: inline-block;
   margin-right: 22px;
+  width: 40px;
+  vertical-align: middle;
 }
 
 .video-carousel .video-thumbnail .video-text h4 {
@@ -349,7 +366,7 @@ body {
   text-align: center;
 }
 
-.video-carousel .carousel .widget.block-products-list .add-button {
+.video-carousel .carousel .widget .block-products-list .add-button {
   font-weight: 400;
 }
 
@@ -378,7 +395,7 @@ body {
   max-width: 294px;
 }
 
-.products .info .cta {
+.products .info .cta a {
   color: #68bebc;
   text-transform: uppercase;
   margin-top: 20px;
@@ -390,6 +407,9 @@ body {
 }
 
 @media only screen and (max-width: 599px) {
+  .cms-page-view .column.main p {
+    margin: 0 auto 10px auto;
+  }
   .content-wrapper h1 {
     font-size: 45px;
   }
@@ -399,15 +419,21 @@ body {
   .content-wrapper h3 {
     font-size: 39px;
   }
+  .content-wrapper h4 {
+    font-size: 30px;
+  }
   .content-wrapper h6 {
     font-size: 18px;
   }
   .content-wrapper p {
     font-size: 15px;
   }
-  .content-wrapper button {
+  .content-wrapper a {
+    color: #68bebc;
+  }
+  .content-wrapper .scm-btn {
     font-size: 18px;
-    padding: 10px 20px;
+    position: relative;
   }
   .scm, .science, .story, .products {
     flex-direction: column;
@@ -499,13 +525,13 @@ body {
     width: 100%;
     text-align: center;
     padding-left: 0;
-    margin-top: 10px;
-    margin-bottom: 20px;
+    margin: 10px auto 20px auto;
     order: 1;
   }
   .story .title h2 {
     margin: 60px auto 20px auto;
     padding: 0;
+    width: 86%;
   }
   .story .microscope {
     display: none;
@@ -554,7 +580,7 @@ body {
 }
 
 @media only screen and (max-width: 387px) {
-  .content-wrapper button {
+  .content-wrapper .scm-btn {
     margin-top: 0;
   }
   .scm .info .info-text .scm-cta {
@@ -580,6 +606,9 @@ body {
 }
 
 @media only screen and (min-width: 600px) and (max-width: 1024px) {
+  .content-wrapper a {
+    color: #68bebc;
+  }
   .science, .carousel {
     background: url("https://www.dhccare.com/media/wysiwyg/content/product/scm/brushsteel-t.jpg");
     background-repeat: no-repeat;
