localized for UK - worked on local ver of video modal

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -193,6 +193,10 @@ body {
   border: none;
 }
 
+.content-wrapper #video {
+  display: none;
+}
+
 .scm .hero img {
   width: 992px;
   max-width: none;
