--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -26,8 +26,20 @@ body {
   padding-bottom: 0;
 }
 
+.modal-popup .modal-header {
+  padding: 0;
+}
+
+.modal-popup .modal-content {
+  padding: 0 0 2rem 0;
+}
+
 .modal-popup .modal-footer {
   display: none;
+}
+
+.modals-overlay {
+  z-index: 1 !important;
 }
 
 .content-wrapper {
@@ -191,10 +203,6 @@ body {
 
 .content-wrapper .slick-next, .content-wrapper .slick-arrow {
   border: none;
-}
-
-.content-wrapper #video {
-  display: none;
 }
 
 .scm .hero img {
@@ -364,52 +372,6 @@ body {
   vertical-align: middle;
 }
 
-.video-carousel .carousel {
-  margin-top: -75px;
-  padding: 100px 0;
-  text-align: center;
-}
-
-.video-carousel .carousel .widget .block-products-list .add-button {
-  font-weight: 400;
-}
-
-.products {
-  margin: 0;
-  height: 765px;
-  background: url("https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-products2.png");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-}
-
-.products .info {
-  padding-top: 8%;
-  padding-left: 8.333333%;
-  width: 44%;
-}
-
-.products .info .productsLine {
-  height: 6px;
-  width: 50px;
-  background-color: #68bebc;
-  margin-bottom: 2rem;
-}
-
-.products .info p {
-  max-width: 294px;
-}
-
-.products .info .cta a {
-  color: #68bebc;
-  text-transform: uppercase;
-  margin-top: 20px;
-  font-weight: 400;
-}
-
-.products .productsImg-mobile {
-  display: none;
-}
-
 @media only screen and (max-width: 599px) {
   .cms-page-view .column.main p {
     margin: 0 auto 10px auto;
@@ -561,26 +523,6 @@ body {
     margin-right: 6px;
     margin-left: 10px;
   }
-  .products {
-    background: none;
-  }
-  .products .info {
-    width: 100%;
-    padding: 0;
-    text-align: center;
-  }
-  .products .info h2 {
-    margin-top: 0;
-  }
-  .products .info .productsLine {
-    margin: 0 auto 2rem auto;
-  }
-  .products .info .cta {
-    margin-bottom: 40px;
-  }
-  .products .productsImg-mobile {
-    display: block;
-  }
 }
 
 @media only screen and (max-width: 387px) {
@@ -698,21 +640,6 @@ body {
   .video-carousel .carousel h2 {
     width: 500px;
     margin: 0 auto;
-  }
-  .products {
-    height: 1051px;
-    background: url("https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-products-t.png");
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-  }
-  .products .info {
-    width: 66%;
-    padding-top: 0;
-    padding-left: 8%;
-  }
-  .products .info p {
-    width: 60%;
-    max-width: 260px;
   }
 }
 
